[gd_scene format=3 uid="uid://4ksndm8ygrgl"]

[ext_resource type="Script" uid="uid://caa7tcc2w85qf" path="res://game/player/player.gd" id="1_ywqt8"]
[ext_resource type="PackedScene" uid="uid://btknduttnmoxf" path="res://addons/godot-xr-tools/misc/vr_common_shader_cache.tscn" id="2_40wtu"]
[ext_resource type="PackedScene" uid="uid://diyu06cw06syv" path="res://addons/godot-xr-tools/player/player_body.tscn" id="3_8soms"]
[ext_resource type="Script" uid="uid://cmbucw30474iw" path="res://game/player/components/simulator_component.gd" id="3_a4w0n"]
[ext_resource type="Script" uid="uid://c8w7t01x5mat6" path="res://game/player/components/xr_controller_component.gd" id="3_anr75"]
[ext_resource type="PackedScene" uid="uid://njx823gyk04n" path="res://addons/godot-xr-tools/hands/scenes/highpoly/left_hand.tscn" id="4_j0mij"]
[ext_resource type="Material" uid="uid://ds2dpvbpht0ea" path="res://addons/godot-xr-tools/hands/materials/labglove.tres" id="5_gb4gm"]
[ext_resource type="PackedScene" uid="uid://b4ysuy43poobf" path="res://addons/godot-xr-tools/functions/function_pickup.tscn" id="7_uv2nh"]
[ext_resource type="PackedScene" uid="uid://raeeicvvindd" path="res://addons/godot-xr-tools/hands/scenes/highpoly/right_hand.tscn" id="8_gb4gm"]
[ext_resource type="PackedScene" uid="uid://cqhw276realc" path="res://addons/godot-xr-tools/functions/function_pointer.tscn" id="8_uv2nh"]

[sub_resource type="SphereShape3D" id="SphereShape3D_anr75"]
radius = 0.115

[sub_resource type="SphereShape3D" id="SphereShape3D_j0mij"]
radius = 0.061639667

[sub_resource type="SphereShape3D" id="SphereShape3D_gb4gm"]
radius = 0.062

[node name="Player" type="XROrigin3D" unique_id=508514659]
script = ExtResource("1_ywqt8")

[node name="XRCamera3D" type="XRCamera3D" parent="." unique_id=1971797437]
current = true

[node name="VRCommonShaderCache" parent="XRCamera3D" unique_id=1098049451 instance=ExtResource("2_40wtu")]

[node name="MaskDetectionArea" type="Area3D" parent="XRCamera3D" unique_id=1064199200]
collision_layer = 0
collision_mask = 288

[node name="CollisionShape3D" type="CollisionShape3D" parent="XRCamera3D/MaskDetectionArea" unique_id=1816848854]
shape = SubResource("SphereShape3D_anr75")

[node name="LeftController" type="XRController3D" parent="." unique_id=1943114489]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 0, 0)
tracker = &"left_hand"
show_when_tracked = true
script = ExtResource("3_anr75")

[node name="LeftHand" parent="LeftController" unique_id=1620100282 instance=ExtResource("4_j0mij")]
hand_material_override = ExtResource("5_gb4gm")

[node name="FunctionPickup" parent="LeftController" unique_id=1977594955 instance=ExtResource("7_uv2nh")]
grab_distance = 0.1
grab_collision_mask = 327696
ranged_enable = false
ranged_collision_mask = 0

[node name="MaskRemovalArea" type="Area3D" parent="LeftController" unique_id=266772741]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.06510015, 0.009075638, -0.05556491)
collision_layer = 256
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeftController/MaskRemovalArea" unique_id=1076917699]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.018933505, 0, 0)
shape = SubResource("SphereShape3D_j0mij")

[node name="RightController" type="XRController3D" parent="." unique_id=1062506974]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0, 0)
tracker = &"right_hand"
show_when_tracked = true
script = ExtResource("3_anr75")

[node name="RightHand" parent="RightController" unique_id=93438000 instance=ExtResource("8_gb4gm")]
hand_material_override = ExtResource("5_gb4gm")

[node name="FunctionPickup" parent="RightController" unique_id=1132399682 instance=ExtResource("7_uv2nh")]
grab_distance = 0.1
grab_collision_mask = 327696
ranged_enable = false
ranged_collision_mask = 0

[node name="FunctionPointer" parent="RightController" unique_id=1838822536 instance=ExtResource("8_uv2nh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.02, 0.05, -0.1)

[node name="MaskRemovalArea" type="Area3D" parent="RightController" unique_id=377438247]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.042704612, 0.007865548, -0.022495423)
collision_layer = 256
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="RightController/MaskRemovalArea" unique_id=729627711]
shape = SubResource("SphereShape3D_gb4gm")

[node name="SimulatorComponent" type="Node" parent="." unique_id=1325402762 node_paths=PackedStringArray("player", "right_controller", "left_controller", "camera")]
script = ExtResource("3_a4w0n")
player = NodePath("..")
right_controller = NodePath("../RightController")
left_controller = NodePath("../LeftController")
camera = NodePath("../XRCamera3D")
metadata/_custom_type_script = "uid://cmbucw30474iw"

[node name="PlayerBody" parent="." unique_id=1621455377 instance=ExtResource("3_8soms")]
collision_mask = 0
enabled = false

[connection signal="area_entered" from="XRCamera3D/MaskDetectionArea" to="." method="_on_mask_detection_area_area_entered"]
[connection signal="area_exited" from="XRCamera3D/MaskDetectionArea" to="." method="_on_mask_detection_area_area_exited"]
[connection signal="body_entered" from="XRCamera3D/MaskDetectionArea" to="." method="_on_mask_detection_area_body_entered"]
[connection signal="recenter" from="LeftController" to="." method="_on_left_controller_recenter"]
[connection signal="has_dropped" from="LeftController/FunctionPickup" to="." method="_on_function_pickup_left_has_dropped"]
[connection signal="has_picked_up" from="LeftController/FunctionPickup" to="." method="_on_function_pickup_left_controller_has_picked_up"]
[connection signal="button_pressed" from="RightController" to="." method="_on_right_controller_button_pressed"]
[connection signal="button_released" from="RightController" to="." method="_on_right_controller_button_released"]
[connection signal="recenter" from="RightController" to="." method="_on_right_controller_recenter"]
[connection signal="has_dropped" from="RightController/FunctionPickup" to="." method="_on_function_pickup_right_has_dropped"]
[connection signal="has_picked_up" from="RightController/FunctionPickup" to="." method="_on_function_pickup_right_controller_has_picked_up"]
